[package]
name = "orrient"
version = "0.1.0"
authors = ["Ben Whitley <dev@purplg.com>"]
edition = "2018"

[workspace]
members = [ "tui" ]

[dependencies]
reqwest = { version = "^0.11.3", features = ["json"] }
clap = "^2.33.3"
ron = "^0.6.4"
serde = { version = "^1.0.117", features = ["derive"] }
serde_json = "^1.0.59"
serde_yaml = "^0.8.17"
serde_derive = "^1.0"
tokio = { version = "^1.6.0", features = ["full"] }
log = "^0.4.14"
fern = "^0.6.0"
chrono = { version =  "^0.4.19", features = [ 'serde' ] }
flate2 = "^1.0"
dirs = "^3.0.2"